Refactor code structure for improved readability and maintainability

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,6 +31,19 @@ server {
     }
 
     # =========================================
+    # Error Pages
+    # =========================================
+    error_page 404 /404.html;
+    location = /404.html {
+        internal;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        internal;
+    }
+
+    # =========================================
     # Gzip Compression
     # =========================================
     gzip on;
@@ -51,7 +64,7 @@ server {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     
     # Content Security Policy
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self';" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://ssl.google-analytics.com https://tagmanager.google.com; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://www.googletagmanager.com; img-src 'self' data: https://www.google-analytics.com https://www.googletagmanager.com https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;" always;
     
     # Referrer Policy
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
@@ -59,16 +72,9 @@ server {
     # Permissions Policy
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=(), payment=()" always;
 
-    # =========================================
-    # Error Pages
-    # =========================================
-    error_page 404 /404.html;
-    location = /404.html {
-        internal;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        internal;
+    # Static assets caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
