feat: enhance SEO setup with www redirect, update build commit, and add SEO status page

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,23 @@
+# =========================================
+# Redirect www to non-www
+# =========================================
+server {
+    listen 80;
+    server_name www.controlforge.dev;
+    return 301 https://controlforge.dev$request_uri;
+}
+
 server {
     # =========================================
     # Configuration Version
     # =========================================
-    set $config_version "1.1.0";
+    set $config_version "1.2.0";
     
     # =========================================
     # Basic Server Configuration
     # =========================================
     listen 80;
-    server_name localhost;
+    server_name localhost controlforge.dev;
     root /usr/share/nginx/html;
 
     # =========================================
