Add Structured Text Syntax and Variables Documentation
- Created a new documentation page for Structured Text syntax basics, covering statement structure, comments, code blocks, operators, and formatting.
- Added a new documentation page for Variables and Data Types, detailing variable declaration, initialization, data types (BOOL, INT, REAL, STRING), arrays, structures, variable scope, and type conversion.
- Included code examples and best practices for each section to enhance understanding and usability.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,34 @@ lerna-debug.log*
 
 # Editor directories and files
 *.local
+*~
+.cache/
+*.tmp
+*.temp
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+.AppleDouble
+.LSOverride
+
+# Production deployment files (sensitive)
+*.key
+*.pem
+*.crt
+docker-compose.override.yml
+
+# Coverage reports
+coverage/
+*.lcov
+
+# Runtime data
+*.pid
+*.seed
+*.pid.lock
+
+# Backup files
+*.backup
+*.bak
+*~
+*.orig
