--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
 		"format": "prettier --write .",
+		"validate": "./scripts/pre-deployment-check.sh",
 		"prod:deploy": "pnpm prod:build && pnpm prod:deploy:copy && pnpm prod:deploy:run",
 		"prod:build": "pnpm prebuild && pnpm build",
 		"prod:deploy:copy": "rsync -avz -e 'ssh' ./* homelab:~/ssd-2tb/apps/controlforge-website --include-from='prod.deploy.files.txt' --exclude '*'",
@@ -34,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.1"
+		"@sveltejs/adapter-static": "^3.0.1",
+		"monaco-editor": "^0.52.2"
 	}
 }
