--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -60,7 +60,17 @@ server {
     gzip_comp_level 6;     # Compression level (1-9, 6 is a good balance)
     gzip_vary on;          # Add Vary: Accept-Encoding header
     gzip_proxied any;      # Enable compression for all proxied requests
-    gzip_types text/plain text/css application/json application/javascript;
+    gzip_types 
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml
+        application/wasm;
 
     # =========================================
     # Security Headers
