--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
+		"lint": "prettier --check . && eslint .",
+		"lint:eslint": "eslint .",
+		"lint:eslint:fix": "eslint . --fix",
 		"format": "prettier --write .",
 		"validate": "./scripts/pre-deployment-check.sh",
 		"prod:deploy": "pnpm prod:build && pnpm prod:deploy:copy && pnpm prod:deploy:run",
@@ -21,16 +23,23 @@
 		"postinstall": "node scripts/generate-build-info.cjs"
 	},
 	"devDependencies": {
+		"@eslint/js": "^10.0.1",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@typescript-eslint/eslint-plugin": "^8.55.0",
+		"@typescript-eslint/parser": "^8.55.0",
 		"autoprefixer": "^10.4.18",
+		"eslint": "^10.0.0",
+		"eslint-plugin-svelte": "^3.15.0",
+		"globals": "^17.3.0",
 		"postcss": "^8.4.36",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"rollup-plugin-visualizer": "^6.0.3",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.7",
+		"svelte-eslint-parser": "^1.4.1",
 		"tailwindcss": "^3.4.1",
 		"terser": "^5.42.0",
 		"tslib": "^2.6.2",
