--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"rollup-plugin-visualizer": "^6.0.3",
+		"shiki": "^3.22.0",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.7",
 		"svelte-eslint-parser": "^1.4.1",
@@ -46,12 +47,10 @@
 		"typescript": "^5.4.2",
 		"vite": "^5.1.6",
 		"vite-bundle-analyzer": "^0.22.3",
-		"vite-plugin-devtools-json": "^0.2.0",
-		"vite-plugin-monaco-editor": "^1.1.0"
+		"vite-plugin-devtools-json": "^0.2.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.1",
-		"monaco-editor": "^0.52.2"
+		"@sveltejs/adapter-static": "^3.0.1"
 	}
 }
