Add Brotli pre-compression to build process
Build changes:
- Add brotli package for pre-compression
- Create compress-brotli.cjs script (75% reduction)
- Integrate into build:prod pipeline
- Generate .br files for 44 assets (1339KB → 333KB)
- Skip files <100 bytes

Infrastructure (ready for brotli when nginx versions align):
- Add Dockerfile to deployment
- Update nginx config with brotli_static (commented out)
- Enable gzip_static for gzip pre-compressed files
- Nginx config v1.3.0

Limitation:
nginx:alpine 1.29 vs nginx-mod-http-brotli 1.28 version mismatch
.br files generated and ready; will activate when versions align

Current: gzip compression active
Future: brotli will provide 15-20% better compression than gzip

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"build:analyze": "vite build --mode analyze",
-		"build:prod": "NODE_ENV=production vite build --minify terser",
+		"build:prod": "NODE_ENV=production vite build --minify terser && pnpm compress:brotli",
+		"compress:brotli": "node scripts/compress-brotli.cjs",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -30,6 +31,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.55.0",
 		"@typescript-eslint/parser": "^8.55.0",
 		"autoprefixer": "^10.4.18",
+		"brotli": "^1.3.3",
 		"eslint": "^10.0.0",
 		"eslint-plugin-svelte": "^3.15.0",
 		"globals": "^17.3.0",
