--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,7 +11,7 @@ server {
     # =========================================
     # Configuration Version
     # =========================================
-    set $config_version "1.2.0";
+    set $config_version "1.3.0";
     
     # =========================================
     # Basic Server Configuration
@@ -56,6 +56,7 @@ server {
     # Gzip Compression
     # =========================================
     gzip on;
+    gzip_static on;        # Serve pre-compressed .gz files if available
     gzip_min_length 1000;  # Only compress files larger than 1KB
     gzip_comp_level 6;     # Compression level (1-9, 6 is a good balance)
     gzip_vary on;          # Add Vary: Accept-Encoding header
@@ -71,6 +72,26 @@ server {
         application/atom+xml
         image/svg+xml
         application/wasm;
+
+    # =========================================
+    # Brotli Compression (disabled - version mismatch)
+    # nginx:alpine latest uses nginx 1.29, but nginx-mod-http-brotli is 1.28
+    # Pre-compressed .br files generated, will work when versions align
+    # =========================================
+    # brotli_static on;
+    # brotli on;
+    # brotli_comp_level 6;
+    # brotli_types 
+    #     text/plain
+    #     text/css
+    #     text/xml
+    #     text/javascript
+    #     application/json
+    #     application/javascript
+    #     application/xml+rss
+    #     application/atom+xml
+    #     image/svg+xml
+    #     application/wasm;
 
     # =========================================
     # Security Headers
