Fix: Pin nginx to 1.28.2 to match brotli module version
Changes:
- FROM nginx:1.28.2-alpine (was nginx:alpine latest)
- Install and load nginx-mod-http-brotli modules
- Enable brotli_static and brotli directives in nginx config
- Nginx config version 1.3.0

Result:
- Brotli compression now active (content-encoding: br)
- Serving pre-compressed .br files (75% smaller)
- Gzip fallback for old browsers

Version pinning necessary until Alpine updates nginx-mod-http-brotli to 1.29+

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -53,7 +53,7 @@ server {
     }
 
     # =========================================
-    # Gzip Compression
+    # Gzip Compression (fallback for old browsers)
     # =========================================
     gzip on;
     gzip_static on;        # Serve pre-compressed .gz files if available
@@ -74,24 +74,22 @@ server {
         application/wasm;
 
     # =========================================
-    # Brotli Compression (disabled - version mismatch)
-    # nginx:alpine latest uses nginx 1.29, but nginx-mod-http-brotli is 1.28
-    # Pre-compressed .br files generated, will work when versions align
+    # Brotli Compression (modern browsers)
     # =========================================
-    # brotli_static on;
-    # brotli on;
-    # brotli_comp_level 6;
-    # brotli_types 
-    #     text/plain
-    #     text/css
-    #     text/xml
-    #     text/javascript
-    #     application/json
-    #     application/javascript
-    #     application/xml+rss
-    #     application/atom+xml
-    #     image/svg+xml
-    #     application/wasm;
+    brotli_static on;      # Serve pre-compressed .br files
+    brotli on;             # Dynamic compression fallback
+    brotli_comp_level 6;   # Compression level for dynamic (0-11)
+    brotli_types 
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml
+        application/wasm;
 
     # =========================================
     # Security Headers
