--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,7 +11,7 @@ server {
     # =========================================
     # Configuration Version
     # =========================================
-    set $config_version "1.2.0";
+    set $config_version "1.3.0";
     
     # =========================================
     # Basic Server Configuration
@@ -53,14 +53,33 @@ server {
     }
 
     # =========================================
-    # Gzip Compression
+    # Gzip Compression (fallback for old browsers)
     # =========================================
     gzip on;
+    gzip_static on;        # Serve pre-compressed .gz files if available
     gzip_min_length 1000;  # Only compress files larger than 1KB
     gzip_comp_level 6;     # Compression level (1-9, 6 is a good balance)
     gzip_vary on;          # Add Vary: Accept-Encoding header
     gzip_proxied any;      # Enable compression for all proxied requests
     gzip_types 
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml
+        application/wasm;
+
+    # =========================================
+    # Brotli Compression (modern browsers)
+    # =========================================
+    brotli_static on;      # Serve pre-compressed .br files
+    brotli on;             # Dynamic compression fallback
+    brotli_comp_level 6;   # Compression level for dynamic (0-11)
+    brotli_types 
         text/plain
         text/css
         text/xml
