--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"prod:build": "pnpm prebuild && pnpm build:prod",
 		"prod:deploy:copy": "rsync -avz -e 'ssh' ./* homelab:~/ssd-2tb/apps/michael/controlforge-website --include-from='prod.deploy.files.txt' --exclude '*'",
 		"prod:deploy:run": "ssh homelab 'cd ~/ssd-2tb/apps/michael/controlforge-website && docker compose -f prod.compose.yml up -d && docker restart controlforge-website'",
-		"prebuild": "node scripts/generate-build-info.cjs",
+		"prebuild": "node scripts/generate-build-info.cjs && node scripts/generate-sitemap.cjs",
 		"postinstall": "node scripts/generate-build-info.cjs"
 	},
 	"devDependencies": {
@@ -28,6 +28,7 @@
 		"@sveltejs/adapter-auto": "^7.0.1",
 		"@sveltejs/kit": "^2.51.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@types/node": "^25.2.3",
 		"@typescript-eslint/eslint-plugin": "^8.55.0",
 		"@typescript-eslint/parser": "^8.55.0",
 		"autoprefixer": "^10.4.18",
