--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.1"
+		"@sveltejs/adapter-static": "^3.0.1",
+		"focus-trap": "^8.0.0"
 	}
 }
