--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
 		"@sveltejs/adapter-auto": "^7.0.1",
 		"@sveltejs/kit": "^2.51.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@tailwindcss/vite": "^4.1.18",
 		"@types/node": "^25.2.3",
 		"@typescript-eslint/eslint-plugin": "^8.55.0",
 		"@typescript-eslint/parser": "^8.55.0",
-		"autoprefixer": "^10.4.18",
 		"brotli": "^1.3.3",
 		"eslint": "^10.0.0",
 		"eslint-plugin-svelte": "^3.15.0",
 		"globals": "^17.3.0",
-		"postcss": "^8.4.36",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"rollup-plugin-visualizer": "^6.0.3",
@@ -44,7 +43,7 @@
 		"svelte": "^5.51.0",
 		"svelte-check": "^4.4.0",
 		"svelte-eslint-parser": "^1.4.1",
-		"tailwindcss": "^3.4.1",
+		"tailwindcss": "^4.1.18",
 		"terser": "^5.42.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.2",
