--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"lint:eslint": "eslint .",
 		"lint:eslint:fix": "eslint . --fix",
 		"format": "prettier --write .",
+		"test": "playwright test",
+		"test:ui": "playwright test --ui",
 		"validate": "./scripts/pre-deployment-check.sh",
 		"prod:deploy": "pnpm prod:build && pnpm prod:deploy:copy && pnpm prod:deploy:run",
 		"prod:build": "pnpm prebuild && pnpm build:prod",
@@ -25,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^10.0.1",
+		"@playwright/test": "^1.58.2",
 		"@sveltejs/adapter-auto": "^7.0.1",
 		"@sveltejs/kit": "^2.51.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
