--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"prod:deploy": "pnpm prod:build && pnpm prod:deploy:copy && pnpm prod:deploy:run",
 		"prod:build": "pnpm prebuild && pnpm build:prod",
 		"prod:deploy:copy": "rsync -avz -e 'ssh' ./* homelab:~/ssd-2tb/apps/michael/controlforge-website --include-from='prod.deploy.files.txt' --exclude '*'",
-		"prod:deploy:run": "ssh homelab 'cd ~/ssd-2tb/apps/michael/controlforge-website && docker compose -f prod.compose.yml up -d && docker restart controlforge-website'",
+		"prod:deploy:run": "ssh homelab 'cd ~/ssd-2tb/apps/michael/controlforge-website && docker rm -f controlforge-website 2>/dev/null || true && docker compose -f prod.compose.yml up -d'",
 		"prebuild": "node scripts/generate-build-info.cjs && node scripts/generate-sitemap.cjs",
 		"postinstall": "node scripts/generate-build-info.cjs"
 	},
